v11/fixtures/ast/errors/alias_reexport_method_ambiguity/alias_a.able
package alias_reexport_method_ambiguity_a

import alias_reexport_method_ambiguity_base.{Widget}

private type Local = Widget

methods Local {
  fn tag(self: Self) -> String { "a" }
}
